# ComfyUI-Translation-node

./: README.md  __init__.py  config.json  pyproject.toml
js/: MenuTranslate.js  main.js  utils.js  七彩UI.rar  极致低调UI图标，和ComfyUI默认主题色彩一致.rar
zh-CN/Categories/: Comfyui-QwenEditUtils_nodes.json  Other.json  comfyui-yaser-nodes.json
zh-CN/Menus/: ComfyUI-Align.json  Comfy条件选项.json  Comfy模版汉化-zdfxm.json  Comfy设置菜单及管理器菜单.json  TTS-Audio-Suite.json  猪的飞行梦汉化-QQ群202018000.json
zh-CN/Nodes/: ACE-Step.json  BizyAir.json  ComfyUI-Advanced-ControlNet.json  ComfyUI-AnimateDiff-Evolved.json  ComfyUI-Apt_Preset.json  ComfyUI-CogVideoXWrapper.json  ComfyUI-Crystools.json  ComfyUI-Custom-Scripts.json  ComfyUI-DepthAnythingV2.json  ComfyUI-KJNodes.json  ComfyUI-RyanOnTheInside.json  ComfyUI-SAM3DBody.json  ComfyUI-SUPIR.json  ComfyUI-SeedVR2_VideoUpscaler.json  ComfyUI-StringOps.json  ComfyUI-Upscaler-Tensorrt.json  ComfyUI-VideoHelperSuite.json  ComfyUI-VoxCPMTTS.json  ComfyUI-WanVideoWrapper.json  ComfyUI-YOLO.json  ComfyUI-segment-anything-2.json  ComfyUI-utils-nodes.json  ComfyUI_AdvancedRefluxControl.json  ComfyUI_Comfyroll_CustomNodes.json  ComfyUI_ErrorFixer.json  ComfyUI_GraftingRayman.json  ComfyUI_InfiniteYou.json  ComfyUI_LayerStyle.json  ComfyUI_LayerStyle_Advance.json  ComfyUI_SongGeneration.json  ComfyUI_StoryDiffusion.json  ComfyUI_essentials.json  Comfyui-Memory_Cleanup.json  Comfyui-QwenEditUtils_nodes.json  Comfyui_ControlNet_aux.json  Comfyui_SLK_joy_caption_two.json  HivisionIDPhotos-ComfyUI.json  PromptGenerator.json  TTS-Audio-Suite.json  UltimateSDUpscale.json  (+26 more)
