[project]
name = "chinese-translation"
description = "A Chinese localization plugin that translates ComfyUI pages into Chinese, including the interface, menus, manager, nodes, node library, and templates, providing the most comprehensive possible translation."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/a63976659/ComfyUI-Chinese-Translation"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/a63976659/ComfyUI-Chinese-Translation/wiki"
"Bug Tracker" = "https://github.com/a63976659/ComfyUI-Chinese-Translation/issues"

[tool.comfy]
PublisherId = "a63976659"
DisplayName = "ComfyUI-Chinese-Translation"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

